src/objects/ACCL__Org_Unit_User__c.object
<CustomObject>
    <description>Holds the details of the relationship between organization unit and user.</description>
    <fields>
        <fullName>ACCL__Main__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the main user.</description>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_isOrgUnitChanged__c</fullName>
        <description>This field is updated by Integration to &quot;Int Updated&quot; when there is a org unit change for the user.</description>
        <label>isOrgUnitChanged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Int Updated</fullName>
                </value>
                <value>
                    <fullName>Batch Processed</fullName>
                </value>
                <value>
                    <fullName>TT Processed</fullName>
                </value>
                <value>
                    <fullName>RDR Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Management_Type__c</fullName>
        <description>Management Type.</description>
        <label>Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit__c</fullName>
        <description>Reference to an org unit assigned to a user.</description>
        <label>Org Unit</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Org Unit Users</relationshipLabel>
        <relationshipName>Org_Unit_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Hyperlink to the detail page of the record</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a user assigned to an org unit.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Org_Unit_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>MDLZ_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDLZ_Main</label>
        <type>Checkbox</type>
    </fields>
    <label>Org Unit User</label>
    <nameField>
        <displayFormat>OUU-{0000}</displayFormat>
        <label>Org Unit User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Unit Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>